--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:8eucL56g6MoYVd4Z/FzZyzwA7/8R7qRA4Ly9O5z8vL4=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
@@ -7,9 +7,9 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=trip_builder
+DB_USERNAME=admin
+DB_PASSWORD=admin
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
